--- a/lesson-course-info2.html
+++ b/lesson-course-info2.html
@@ -203,6 +203,7 @@
 				<div class="features-2">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
+							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
 							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
 						</div>
 					</div>
@@ -328,14 +329,7 @@
 												<a href="#">TOEIC</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -359,14 +353,7 @@
 												<a href="#">英検</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスの英検対策は、準2級以上の二次試験の面接対策をネイティブの講師に行ってもらうのが、経済的です。一次試験対策をされたい方は宿題で書いて来られた作文の添削をレッスン内で行うことも出来ます。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -390,14 +377,7 @@
 												<a href="#">TOEFL</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -421,14 +401,7 @@
 												<a href="#">IELTS</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
