--- a/lesson-course.html
+++ b/lesson-course.html
@@ -284,14 +284,12 @@
 
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">プライベートレッスン（マンツマン）</h3>
+												<h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3>
 											</a>
 											<!-- <p class="card-description">
 												Don't be scared of the truth because we need to restart the human...
@@ -307,10 +305,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">マンツーマンの個人レッスンで内容は受講生のレベル、目的に合わせて手作りいたします。また少人数のフリーカンバセーションレッスン（フリートーク）が無料で付いてきます。 1レッスンは40分で曜日、時間帯、レッスン数は受講生のスケジュールに合わせて自由に選んでいただける完全自由予約制です。</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -324,8 +319,6 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
@@ -347,10 +340,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">お友達と2人のレッスンで、内容は受講生のレベル、目的に合わせて手作り致します。1レッスンは40分で曜日、時間帯、レッスン数はお2人のスケジュールに合わせて自由に選んでいただける完全自由予約制です。スケジュールの調整はお2人で相談なさって下さい。お友達、同僚、ご夫婦などでご利用されています。知らない人と受けるレッスンでは会話もその場限りですが、お友達同士なら授業の後もそのまま英語モードで会話の練習をしたり、復習も一緒にできたり励ましあって楽しく英語の勉強ができます。</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -364,14 +354,12 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">フリーカンバセーション</h3>
+												<h3 class="card-title">フリーカンバセーション<br>（フリートーク）</h3>
 											</a>
 											<!-- <p class="card-description">
 												Don't be scared of the truth because we need to restart the human...
@@ -387,10 +375,8 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
+											</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -404,8 +390,6 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
@@ -427,10 +411,8 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">お友達3人から8人が曜日を決めてご一緒に受けていただく授業です。多少のレベルの違いがあっても皆さんのご了承があれば、サンミハールのベテラン講師が調整しながら楽しく授業を進めていきます。
+												お友達同士、会社の同僚同士等、目的が同じであれば、知らない人と受けるレッスンに比べてはるかに効率的で自己紹介など無駄な時間を取らずに授業に入れます。 英会話をしたい人が3人集まれば絶対お得なこのクラスをぜひ！</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -444,14 +426,12 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">オンラインレッスン</h3>
+												<h3 class="card-title">WEBレッスン<br>(オンラインレッスン)</h3>
 											</a>
 											<!-- <p class="card-description">
 												Don't be scared of the truth because we need to restart the human...
@@ -467,10 +447,9 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">英語圏への転勤後でも継続率95%!<br> 遠方の方、通学が困難な方にはWEBレッスン（オンラインレッスン）が便利です。スカイプを使って、ご自宅にいながら、また職場からレッスンを受けていただけます。神戸三宮のスクールと同じクオリティの授業をオンラインで受けられます。オンライン英会話では時間の短いところが多いようですが、せっかく英語脳になったのに授業が終わってしまってはもったいない！
+												三宮スクールと同じ40分ネイティブの英会話レッスンです。
+												<br> 三宮のスクールでレッスンを受けていた方が英語圏への転勤後にレッスンを継続される割合はなんと95%! 神戸三宮でネイティブの教える質の高いWebレッスン、海外のスクールでは満足出来ない丁寧さがサンミハールにはあります。</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -484,8 +463,6 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4">
-
-
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
@@ -507,10 +484,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aspernatur hic fugiat omnis
-												atque unde praesentium itaque optio in blanditiis aliquid dolorum, harum accusantium voluptatum
-												ex voluptates iste tempore minus? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-												Laborum quaerat, dolor, doloremque totam a aut.</p>
+											<p class="card-description">サンミハールでは三宮スクールと同じレベルのトレーニングされたネイティブ英会話講師を派遣します。場所や時間はご希望をお聞かせ下さい。</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
