--- a/index.html
+++ b/index.html
@@ -321,6 +321,11 @@
             レッスンを詳しく見てみる
           </a>
         </div>
+        <div class="row text-center u-margin-top-small">
+          <a href="#" class="">
+            <img src="assets/img/call-banner-2.png" alt="">
+          </a>
+        </div>
 
 
         <!-- <div class="row text-center">
