--- a/index.html
+++ b/index.html
@@ -320,12 +320,15 @@
           <a href="#" class="btn btn-primary btn-lg">
             レッスンを詳しく見てみる
           </a>
-        </div>
-        <div class="row text-center u-margin-top-small">
-          <a href="#" class="">
-            <img src="assets/img/call-banner-2.png" alt="">
+          <a href="#" id="call-now-btn-box">
+            <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
           </a>
         </div>
+        <!-- <div class="row text-center u-margin-top-small">
+          <a href="#">
+            <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
+          </a>
+        </div> -->
 
 
         <!-- <div class="row text-center">
@@ -1107,7 +1110,7 @@
 
 
 
-
+    <hr>
 
 
 
