Add call-now-btn-blue to top

--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
           <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
           </a>
+          <a href="#" class="call-now-btn-box">
+            <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
+          </a>
         </div>
       </div>
     </div>
@@ -320,7 +323,7 @@
           <a href="#" class="btn btn-primary btn-lg">
             レッスンを詳しく見てみる
           </a>
-          <a href="#" id="call-now-btn-box">
+          <a href="#" class="call-now-btn-box">
             <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
           </a>
         </div>
