Add content to front of cards

--- a/lesson-course.html
+++ b/lesson-course.html
@@ -289,11 +289,18 @@
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3>
+												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
+												<h3 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのプライベートレッスン（マンツーマン）の魅力</h3>
 											</a>
-											<!-- <p class="card-description">
-												Don't be scared of the truth because we need to restart the human...
-											</p> -->
+											<p class="card-description">
+												<ul class="card-description text-left">
+													<li>授業を録音できます</li>
+													<li>英作文他、ホームワークの添削無料</li>
+													<li>テキスト他教材の持ち込みOK！</li>
+													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
+													<li>フリーカンバセーションが無料で付いてくる</li>
+												</ul>
+											</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -326,9 +333,25 @@
 											<a href="#">
 												<h3 class="card-title">セミプライベートレッスン</h3>
 											</a>
-											<!-- <p class="card-description">
-												Don't be scared of the truth because we need to restart the human...
-											</p> -->
+											<p class="card-description">
+												<ul class="card-description text-left">
+													<li>授業を録音できます</li>
+													<li>英作文他、ホームワークの添削無料</li>
+													<li>テキスト他教材の持ち込みOK！</li>
+													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
+													<li>授業外でもお友達同士で励ましあって勉強出来ます</li>
+													<li>毎回自己紹介をしなくていい◎</li>
+													<li>フリーカンバセーションが無料で付いてくる（月6回～）</li>
+												</ul>
+
+												<!-- ★
+★
+★
+★
+★
+★  -->
+
+											</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
