Change card height

--- a/lesson-course.html
+++ b/lesson-course.html
@@ -286,11 +286,11 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
-												<h3 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのプライベートレッスン（マンツーマン）の魅力</h3>
+												<h3 class="card-title">プライベートレッスン<br>（マンツーマン)</h3>
 											</a>
 											<p class="card-description">
 												<ul class="card-description text-left">
@@ -328,10 +328,10 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">セミプライベートレッスン</h3>
+												<h3 class="card-title">セミプライベート<br>レッスン</h3>
 											</a>
 											<p class="card-description">
 												<ul class="card-description text-left">
@@ -343,14 +343,6 @@
 													<li>毎回自己紹介をしなくていい◎</li>
 													<li>フリーカンバセーションが無料で付いてくる（月6回～）</li>
 												</ul>
-
-												<!-- ★
-★
-★
-★
-★
-★  -->
-
 											</p>
 
 											<div class="footer text-center">
@@ -379,7 +371,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">フリーカンバセーション<br>（フリートーク）</h3>
