--- a/lesson-course.html
+++ b/lesson-course.html
@@ -292,15 +292,6 @@
 												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
 												<h3 class="card-title">プライベートレッスン<br>（マンツーマン)</h3>
 											</a>
-											<p class="card-description">
-												<ul class="card-description text-left">
-													<li>授業を録音できます</li>
-													<li>英作文他、ホームワークの添削無料</li>
-													<li>テキスト他教材の持ち込みOK！</li>
-													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
-													<li>フリーカンバセーションが無料で付いてくる</li>
-												</ul>
-											</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -313,6 +304,16 @@
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<p class="card-description">マンツーマンの個人レッスンで内容は受講生のレベル、目的に合わせて手作りいたします。また少人数のフリーカンバセーションレッスン（フリートーク）が無料で付いてきます。 1レッスンは40分で曜日、時間帯、レッスン数は受講生のスケジュールに合わせて自由に選んでいただける完全自由予約制です。</p>
+											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのプライベートレッスン（マンツーマン）の魅力</h4>
+											<p class="card-description">
+												<ul class="card-description text-left">
+													<li>授業を録音できます</li>
+													<li>英作文他、ホームワークの添削無料</li>
+													<li>テキスト他教材の持ち込みOK！</li>
+													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
+													<li>フリーカンバセーションが無料で付いてくる</li>
+												</ul>
+											</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -333,17 +334,6 @@
 											<a href="#">
 												<h3 class="card-title">セミプライベート<br>レッスン</h3>
 											</a>
-											<p class="card-description">
-												<ul class="card-description text-left">
-													<li>授業を録音できます</li>
-													<li>英作文他、ホームワークの添削無料</li>
-													<li>テキスト他教材の持ち込みOK！</li>
-													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
-													<li>授業外でもお友達同士で励ましあって勉強出来ます</li>
-													<li>毎回自己紹介をしなくていい◎</li>
-													<li>フリーカンバセーションが無料で付いてくる（月6回～）</li>
-												</ul>
-											</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -356,6 +346,18 @@
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<p class="card-description">お友達と2人のレッスンで、内容は受講生のレベル、目的に合わせて手作り致します。1レッスンは40分で曜日、時間帯、レッスン数はお2人のスケジュールに合わせて自由に選んでいただける完全自由予約制です。スケジュールの調整はお2人で相談なさって下さい。お友達、同僚、ご夫婦などでご利用されています。知らない人と受けるレッスンでは会話もその場限りですが、お友達同士なら授業の後もそのまま英語モードで会話の練習をしたり、復習も一緒にできたり励ましあって楽しく英語の勉強ができます。</p>
+											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのセミプライベートレッスンの魅力</h4>
+											<p class="card-description">
+												<ul class="card-description text-left">
+													<li>授業を録音できます</li>
+													<li>英作文他、ホームワークの添削無料</li>
+													<li>テキスト他教材の持ち込みOK！</li>
+													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
+													<li>授業外でもお友達同士で励ましあって勉強出来ます</li>
+													<li>毎回自己紹介をしなくていい◎</li>
+													<li>フリーカンバセーションが無料で付いてくる（月6回～）</li>
+												</ul>
+											</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -390,6 +392,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
+											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのフリーカンバセーション</h4>
 											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
 											</p>
 											<br>
