Change card height

--- a/lesson-course.html
+++ b/lesson-course.html
@@ -286,7 +286,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
@@ -304,7 +304,7 @@
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<p class="card-description">マンツーマンの個人レッスンで内容は受講生のレベル、目的に合わせて手作りいたします。また少人数のフリーカンバセーションレッスン（フリートーク）が無料で付いてきます。 1レッスンは40分で曜日、時間帯、レッスン数は受講生のスケジュールに合わせて自由に選んでいただける完全自由予約制です。</p>
-											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのプライベートレッスン（マンツーマン）の魅力</h4>
+											<p class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのプライベートレッスン（マンツーマン）の魅力</p>
 											<p class="card-description">
 												<ul class="card-description text-left">
 													<li>授業を録音できます</li>
@@ -329,7 +329,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">セミプライベート<br>レッスン</h3>
@@ -346,7 +346,7 @@
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<p class="card-description">お友達と2人のレッスンで、内容は受講生のレベル、目的に合わせて手作り致します。1レッスンは40分で曜日、時間帯、レッスン数はお2人のスケジュールに合わせて自由に選んでいただける完全自由予約制です。スケジュールの調整はお2人で相談なさって下さい。お友達、同僚、ご夫婦などでご利用されています。知らない人と受けるレッスンでは会話もその場限りですが、お友達同士なら授業の後もそのまま英語モードで会話の練習をしたり、復習も一緒にできたり励ましあって楽しく英語の勉強ができます。</p>
-											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのセミプライベートレッスンの魅力</h4>
+											<p class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのセミプライベートレッスンの魅力</p>
 											<p class="card-description">
 												<ul class="card-description text-left">
 													<li>授業を録音できます</li>
@@ -373,7 +373,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 520px; background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">フリーカンバセーション<br>（フリートーク）</h3>
@@ -410,7 +410,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">グループレッスン</h3>
@@ -446,7 +446,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">WEBレッスン<br>(オンラインレッスン)</h3>
@@ -483,7 +483,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">出張レッスン</h3>
