--- a/lesson-course.html
+++ b/lesson-course.html
@@ -332,7 +332,7 @@
 									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">セミプライベート<br>レッスン</h3>
+												<h3 class="card-title">セミプライベート<br>レッスン<br>（1：2）</h3>
 											</a>
 
 											<div class="footer text-center">
@@ -392,7 +392,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<h4 class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのフリーカンバセーション</h4>
+											<p class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのフリーカンバセーション</p>
 											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
 											</p>
 											<br>
@@ -413,7 +413,7 @@
 									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
 											<a href="#">
-												<h3 class="card-title">グループレッスン</h3>
+												<h3 class="card-title">グループレッスン<br>（1：3～8）</h3>
 											</a>
 											<!-- <p class="card-description">
 												Don't be scared of the truth because we need to restart the human...
@@ -429,6 +429,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
+											<p class="card-title">神戸・三宮の英会話サンミハールランゲージサービスのグループレッスン</p>
 											<p class="card-description">お友達3人から8人が曜日を決めてご一緒に受けていただく授業です。多少のレベルの違いがあっても皆さんのご了承があれば、サンミハールのベテラン講師が調整しながら楽しく授業を進めていきます。
 												お友達同士、会社の同僚同士等、目的が同じであれば、知らない人と受けるレッスンに比べてはるかに効率的で自己紹介など無駄な時間を取らずに授業に入れます。 英会話をしたい人が3人集まれば絶対お得なこのクラスをぜひ！</p>
 											<br>
