--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
 
         <!-- DAILY THEME -->
-        <!-- <div class="row">
+        <div class="row text-center">
           <div class="col-md-8 col-md-offset-2">
             <h2 class="title">デイリーテーマ</h2>
             <h4 id="totd-date"></h4>
             <h2 id="totd-textbox"></h2>
           </div>
-        </div> -->
+        </div>
 
         <!-- <div class="features"> -->
         <div class="row">
@@ -862,13 +862,16 @@
               <div class="facebook-embed">
 
 
-                <div class="fb-page" style="width: auto;" data-href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal"
+                <!-- <div class="fb-page" style="width: auto;" data-href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal"
                   data-tabs="events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="true"
                   data-show-facepile="true">
                   <blockquote cite="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal" class="fb-xfbml-parse-ignore">
                     <a href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal">英会話のサンミハール　Sun Mihall Language Service</a>
                   </blockquote>
-                </div>
+                </div> -->
+
+                <iframe src="https://calendar.google.com/calendar/embed?title=Upcoming%20Events&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=9qldcojmbklav5u5b5ll201p54%40group.calendar.google.com&amp;color=%23691426&amp;ctz=Asia%2FTokyo"
+                  style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
 
 
@@ -879,7 +882,7 @@
               <br /><br />
               <!-- Some <br /> tags to push the text to align with the image, you can remove it if you have more text on the right side :-) -->
 
-              <h2 class="title">Upcoming Events</h2>
+              <h2 class="title">School Schedule</h2>
 
               <div class="info info-horizontal">
                 <div class="icon icon-primary">
