Consistent navs + contact forms, phone-now btn linked

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                 </a>
               </li>
               <li>
-                <a href="lesson-course-info2.html">
+                <a href="lesson-course-info.html">
                   TOEIC・英検
                 </a>
               </li>
               <li>
-                <a href="lesson-course-info2.html">
+                <a href="lesson-course-info.html">
                   TOEFL・IELTS
                 </a>
               </li>
@@ -256,7 +256,7 @@
           <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
           </a>
-          <a href="#" class="call-now-btn-box">
+          <a href="tel:###-###-###" class="call-now-btn-box">
             <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
         </div>
@@ -323,7 +323,7 @@
           <a href="#" class="btn btn-primary btn-lg">
             レッスンを詳しく見てみる
           </a>
-          <a href="#" class="call-now-btn-box">
+          <a href="tel:###-###-###" class="call-now-btn-box">
             <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
           </a>
         </div>
@@ -871,7 +871,8 @@
                 </div> -->
 
                 <iframe src="https://calendar.google.com/calendar/embed?title=Upcoming%20Events&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=9qldcojmbklav5u5b5ll201p54%40group.calendar.google.com&amp;color=%23691426&amp;ctz=Asia%2FTokyo"
-                  style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                  style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no">
+                </iframe>
 
 
 
