--- a/about.html
+++ b/about.html
@@ -45,129 +45,153 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a href="index.html">
-							<i class="material-icons">apps</i> Home
-						</a>
-					</li>
+
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_day</i> Link 2
+							ホーム
 							<b class="caret"></b>
 						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
+						<ul class="dropdown-menu">
 							<li>
-								<a href="#">
-									<i class="material-icons">dns</i> sub-link
+								<a href="index.html">
+									Home
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">build</i> sub-link
+								<a href="index.html#features">
+									Features
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">list</i> sub-link
+								<a href="index.html#campaign">
+									キャンペーン
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">people</i> sub-link
+								<a href="index.html#pricing">
+									料金と時間割
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">assignment</i> sub-link
+								<a href="index.html#new-students">
+									初めての方へ
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">monetization_on</i> sub-link
+								<a href="index.html#testimonials">
+									生徒の声
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">chat</i> sub-link
+								<a href="index.html#events">
+									イベント
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">call</i> sub-link
-								</a>
-							</li>
-
-						</ul>
-					</li>
-
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_carousel</i> Link 3
-							<b class="caret"></b>
-						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
-							<li>
-								<a href="#">
-									<i class="material-icons">account_balance</i> sub-link
+								<a href="index.html#team">
+									チーム
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">art_track</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_quilt</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">location_on</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_day</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">fingerprint</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">attach_money</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">shop</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">beach_access</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">account_circle</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">person_add</i> sub-link
+								<a href="index.html#contactus">
+									お問い合わせ
 								</a>
 							</li>
 						</ul>
 					</li>
 
+
 					<li>
-						<a href="#" target="_blank" class="btn btn-white btn-simple">
-							<i class="material-icons">shopping_cart</i> Link 4
+						<a href="lesson-course.html">
+							レッスンコース
+						</a>
+					</li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							目的別の英会話レッスン
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a href="#">
+									日常英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									ビジネス英会話
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEIC・英検
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEFL・IELTS
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									医療英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									企業内語学研修
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									英文校正サービス
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									海外赴任準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									航空英語・ICAO対策
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									留学準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									帰国子女
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									子供英会話
+								</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="pricing.html" target="" class="btn btn-white btn-simple">
+							料金と時間割
+						</a>
+					</li>
+
+					<li>
+						<a href="about.html" target="" class="btn btn-white btn-simple">
+							About
+						</a>
+					</li>
+
+					<li>
+						<a href="index.html#contactus" target="" class="btn btn-white btn-simple">
+							お問い合わせ
 						</a>
 					</li>
 				</ul>
