--- a/lesson-course-info.html
+++ b/lesson-course-info.html
@@ -45,129 +45,153 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a href="index.html">
-							<i class="material-icons">apps</i> Home
-						</a>
-					</li>
+
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_day</i> Link 2
+							ホーム
 							<b class="caret"></b>
 						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
+						<ul class="dropdown-menu">
 							<li>
-								<a href="#">
-									<i class="material-icons">dns</i> sub-link
+								<a href="index.html">
+									Home
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">build</i> sub-link
+								<a href="index.html#features">
+									Features
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">list</i> sub-link
+								<a href="index.html#campaign">
+									キャンペーン
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">people</i> sub-link
+								<a href="index.html#pricing">
+									料金と時間割
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">assignment</i> sub-link
+								<a href="index.html#new-students">
+									初めての方へ
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">monetization_on</i> sub-link
+								<a href="index.html#testimonials">
+									生徒の声
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">chat</i> sub-link
+								<a href="index.html#events">
+									イベント
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">call</i> sub-link
-								</a>
-							</li>
-
-						</ul>
-					</li>
-
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_carousel</i> Link 3
-							<b class="caret"></b>
-						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
-							<li>
-								<a href="#">
-									<i class="material-icons">account_balance</i> sub-link
+								<a href="index.html#team">
+									チーム
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">art_track</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_quilt</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">location_on</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_day</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">fingerprint</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">attach_money</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">shop</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">beach_access</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">account_circle</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">person_add</i> sub-link
+								<a href="index.html#contactus">
+									お問い合わせ
 								</a>
 							</li>
 						</ul>
 					</li>
 
+
 					<li>
-						<a href="lesson-course-info2.html" class="btn btn-white btn-simple">
-							course2
+						<a href="lesson-course.html">
+							レッスンコース
+						</a>
+					</li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							目的別の英会話レッスン
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a href="#">
+									日常英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									ビジネス英会話
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEIC・英検
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEFL・IELTS
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									医療英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									企業内語学研修
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									英文校正サービス
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									海外赴任準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									航空英語・ICAO対策
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									留学準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									帰国子女
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									子供英会話
+								</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="pricing.html" target="" class="btn btn-white btn-simple">
+							料金と時間割
+						</a>
+					</li>
+
+					<li>
+						<a href="about.html" target="" class="btn btn-white btn-simple">
+							About
+						</a>
+					</li>
+
+					<li>
+						<a href="index.html#contactus" target="" class="btn btn-white btn-simple">
+							お問い合わせ
 						</a>
 					</li>
 				</ul>
@@ -203,6 +227,7 @@
 				<div class="features-2">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
+							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
 							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
 						</div>
 					</div>
@@ -328,14 +353,7 @@
 												<a href="#">TOEIC</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -359,14 +377,7 @@
 												<a href="#">英検</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスの英検対策は、準2級以上の二次試験の面接対策をネイティブの講師に行ってもらうのが、経済的です。一次試験対策をされたい方は宿題で書いて来られた作文の添削をレッスン内で行うことも出来ます。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -390,14 +401,7 @@
 												<a href="#">TOEFL</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -421,14 +425,7 @@
 												<a href="#">IELTS</a>
 											</h3>
 											<p class="card-description">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-												et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-												nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-												velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-												proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat
-												cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-												sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum.
+												神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">Book Free Trial Lesson</a>
@@ -444,9 +441,7 @@
 					</div>
 				</div>
 
-
 				<!--     *********    END BLOGS 3      *********      -->
-
 
 			</div>
 
@@ -454,7 +449,180 @@
 
 
 
-			<hr>
+
+
+			<div class="cd-section" id="pricing">
+
+				<!--     *********    PRICING 5     *********      -->
+
+				<div class="pricing-5 section-gray" id="pricing-5 lessons">
+
+					<div class="container">
+						<div class="row">
+							<div class="col-md-4">
+								<h2 class="title">Choose a plan for your next project</h2>
+								<ul class="nav nav-pills" role="tablist">
+									<li class="active">
+										<a href="#private" role="tab" data-toggle="tab">
+											Private/Web
+										</a>
+									</li>
+									<li>
+										<a href="#semi-private" role="tab" data-toggle="tab">
+											Semi-Private
+										</a>
+									</li>
+									<li>
+										<a href="#group" role="tab" data-toggle="tab">
+											Group
+										</a>
+									</li>
+								</ul>
+
+								<p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae at
+									eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure totam reprehenderit
+									laboriosam, veniam.</p>
+								<a href="pricing.html" class="btn btn-white margin-top-small" style="width: 100%; max-width: 300px; display: block;">
+									See more pricing
+								</a>
+								<a href="#contactus" class="btn btn-primary" style="width: 100%; max-width: 300px; display: block;">
+									Book a trial lesson now
+								</a>
+							</div>
+
+							<div class="col-md-7 col-md-offset-1">
+								<div class="tab-content tab-space">
+									<div class="tab-pane active" id="private">
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>3600<small>+tax</small></h1>
+													<ul>
+														<li><b>1</b> Student</li>
+														<li><b>40</b> Minutes</li>
+														<!-- <li><b>4 to 100</b> Lesson pack</li> -->
+														<li>Up to 2.5 years to take the lessons</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">Web Lesson</h6>
+													<h1 class="card-title"><small>¥</small>3000</h1>
+													<ul>
+														<li><b>1</b> Student</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-white btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+
+									<div class="tab-pane" id="semi-private">
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>2500<small>+tax</small></h1>
+													<ul>
+														<li><b>2</b> Students</li>
+														<li><b>40</b> Minutes</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">Web Lesson</h6>
+													<h1 class="card-title"><small>¥</small>3000</h1>
+													<ul>
+														<li><b>2</b> Students</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+
+									<div class="tab-pane" id="group">
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>6000<small>+tax</small></h1>
+													<ul>
+														<li>Up to <b>4</b> Students</li>
+														<li><b>40</b> Minutes</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h1 class="card-title"><small>¥</small>2000</h1>
+													<ul>
+														<li><b>Up to 4</b> Students</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+								</div>
+							</div>
+
+
+						</div>
+
+					</div>
+				</div>
+
+				<!--     *********    END PRICING 5      *********      -->
+
+			</div>
+
+
+
 
 
 
@@ -466,35 +634,63 @@
 				<div class="section section-contacts">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h2 class="text-center title">Book a Free Trial lesson</h2>
-							<h4 class="text-center description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ullam quo quaerat quam nostrum sed
-								necessitatibus, reprehenderit temporibus odio laboriosam saepe possimus ad deleniti ducimus quis
-								eos in exercitationem similique.</h4>
+							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+							<h4 class="text-center description">
+								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+							</h4>
+							<h4 class="text-center description">
+								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+								<strong>（078-331-3035）</strong>にてご連絡ください。
+							</h4>
 							<form class="contact-form">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="form-group label-floating">
+											<label class="control-label">お名前（必須）</label>
+											<input type="email" class="form-control" required>
+										</div>
+									</div>
+								</div>
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group label-floating">
-											<label class="control-label">Your Name</label>
-											<input type="email" class="form-control">
+											<label class="control-label">メールアドレス（必須）</label>
+											<input type="email" class="form-control" required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group label-floating">
-											<label class="control-label">Your Email</label>
-											<input type="email" class="form-control">
+											<label class="control-label">メールアドレス（確認用）</label>
+											<input type="email" class="form-control" required>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6">
+										<div class="form-group label-floating">
+											<label class="control-label">電話番号（必須）</label>
+											<input type="text" class="form-control" required>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group label-floating">
+											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+											<input type="text" class="form-control">
 										</div>
 									</div>
 								</div>
 
 								<div class="form-group label-floating">
-									<label class="control-label">Your Messge</label>
-									<textarea class="form-control" rows="4"></textarea>
+									<label class="control-label">お問い合わせ内容</label>
+									<textarea class="form-control" rows="4" required></textarea>
 								</div>
 
 								<div class="row">
 									<div class="col-md-4 col-md-offset-4 text-center">
 										<button class="btn btn-primary btn-raised">
-											Send Message
+											送信
+											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
 										</button>
 									</div>
 								</div>
