--- a/pricing.html
+++ b/pricing.html
@@ -45,129 +45,153 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a href="index.html">
-							<i class="material-icons">apps</i> Home
-						</a>
-					</li>
+
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_day</i> Link 2
+							ホーム
 							<b class="caret"></b>
 						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
+						<ul class="dropdown-menu">
 							<li>
-								<a href="#">
-									<i class="material-icons">dns</i> sub-link
+								<a href="index.html">
+									Home
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">build</i> sub-link
+								<a href="index.html#features">
+									Features
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">list</i> sub-link
+								<a href="index.html#campaign">
+									キャンペーン
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">people</i> sub-link
+								<a href="index.html#pricing">
+									料金と時間割
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">assignment</i> sub-link
+								<a href="index.html#new-students">
+									初めての方へ
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">monetization_on</i> sub-link
+								<a href="index.html#testimonials">
+									生徒の声
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">chat</i> sub-link
+								<a href="index.html#events">
+									イベント
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">call</i> sub-link
-								</a>
-							</li>
-
-						</ul>
-					</li>
-
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="material-icons">view_carousel</i> Link 3
-							<b class="caret"></b>
-						</a>
-						<ul class="dropdown-menu dropdown-with-icons">
-							<li>
-								<a href="#">
-									<i class="material-icons">account_balance</i> sub-link
+								<a href="index.html#team">
+									チーム
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									<i class="material-icons">art_track</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_quilt</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">location_on</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">view_day</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">fingerprint</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">attach_money</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">shop</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">beach_access</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">account_circle</i> sub-link
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="material-icons">person_add</i> sub-link
+								<a href="index.html#contactus">
+									お問い合わせ
 								</a>
 							</li>
 						</ul>
 					</li>
 
+
 					<li>
-						<a href="lesson-course-info.html" class="btn btn-white btn-simple">
-							course1
+						<a href="lesson-course.html">
+							レッスンコース
+						</a>
+					</li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							目的別の英会話レッスン
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a href="#">
+									日常英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									ビジネス英会話
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEIC・英検
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-info.html">
+									TOEFL・IELTS
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									医療英会話
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									企業内語学研修
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									英文校正サービス
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									海外赴任準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									航空英語・ICAO対策
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									留学準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									帰国子女
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									子供英会話
+								</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="pricing.html" target="" class="btn btn-white btn-simple">
+							料金と時間割
+						</a>
+					</li>
+
+					<li>
+						<a href="about.html" target="" class="btn btn-white btn-simple">
+							About
+						</a>
+					</li>
+
+					<li>
+						<a href="index.html#contactus" target="" class="btn btn-white btn-simple">
+							お問い合わせ
 						</a>
 					</li>
 				</ul>
@@ -486,35 +510,63 @@
 			<div class="section section-contacts">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h2 class="text-center title">Book a Free Trial lesson</h2>
-						<h4 class="text-center description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ullam quo quaerat quam nostrum sed
-							necessitatibus, reprehenderit temporibus odio laboriosam saepe possimus ad deleniti ducimus quis
-							eos in exercitationem similique.</h4>
+						<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+						<h4 class="text-center description">
+							お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+							<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+						</h4>
+						<h4 class="text-center description">
+							下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+							<strong>（078-331-3035）</strong>にてご連絡ください。
+						</h4>
 						<form class="contact-form">
+							<div class="row">
+								<div class="col-md-12">
+									<div class="form-group label-floating">
+										<label class="control-label">お名前（必須）</label>
+										<input type="email" class="form-control" required>
+									</div>
+								</div>
+							</div>
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group label-floating">
-										<label class="control-label">Your Name</label>
-										<input type="email" class="form-control">
+										<label class="control-label">メールアドレス（必須）</label>
+										<input type="email" class="form-control" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group label-floating">
-										<label class="control-label">Your Email</label>
-										<input type="email" class="form-control">
+										<label class="control-label">メールアドレス（確認用）</label>
+										<input type="email" class="form-control" required>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">電話番号（必須）</label>
+										<input type="text" class="form-control" required>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+										<input type="text" class="form-control">
 									</div>
 								</div>
 							</div>
 
 							<div class="form-group label-floating">
-								<label class="control-label">Your Messge</label>
-								<textarea class="form-control" rows="4"></textarea>
+								<label class="control-label">お問い合わせ内容</label>
+								<textarea class="form-control" rows="4" required></textarea>
 							</div>
 
 							<div class="row">
 								<div class="col-md-4 col-md-offset-4 text-center">
 									<button class="btn btn-primary btn-raised">
-										Send Message
+										送信
+										<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
 									</button>
 								</div>
 							</div>
